--- a/scss/Why CODEPRIDE.scss
+++ b/scss/Why CODEPRIDE.scss
@@ -14,10 +14,6 @@ body {
                 @include Inter(16px, 600, normal);
                 color: $Background;
             }
-            .burger-menu {
-                display: none;
-            }
-
             .nav {
                 &__list {
                     display: flex;
@@ -29,6 +25,9 @@ body {
                         }
                     }
                 }
+            }
+            .hamburger {
+                display: none;
             }
         }
         .btn {
@@ -404,15 +403,42 @@ body {
                 &__btn {
                     display: none;
                 }
-                .burger-menu {
+                .hamburger {
                     display: block;
-                }
+                    position: fixed;
+                    z-index: 100;
+                    top: 1rem;
+                    right: 1rem;
+                    padding: 4px;
+                    border: black solid 1px;
+                    background: white;
+                    cursor: pointer;
+                  }
+                  .close__icon {
+                    display: none;
+                  }
+                  .menu {
+                    display: flex;
+                    flex-direction: column;
+                    position: fixed;
+                    transform: translateY(-100%);
+                    transition: transform 0.2s;
+                    top: 0;
+                    left: 0;
+                    right: 0;
+                    bottom: 0;
+                    z-index: 99;
+                    background: black;
+                    color: white;
+                    list-style: none;
+                    padding-top: 4rem;
+                  }
+                  .showMenu {
+                    transform: translateY(0);
+                  }
                 .btn {
                     display: none;
                 }
-            }
-            .nav {
-                display: none;
             }
             .main {
                 .section1 {
@@ -470,23 +496,49 @@ body {
     }
 }
 
-@media screen and (max-width: 834px) and (min-width: 376px) {
+@media screen and (max-width: 834px) {
     body {
         .wrapper {
             .header {
-                gap: 139px;
                 &__btn {
                     display: none;
                 }
-                .burger-menu {
+                .hamburger {
                     display: block;
-                }
+                    position: fixed;
+                    z-index: 100;
+                    top: 1rem;
+                    right: 1rem;
+                    padding: 4px;
+                    border: black solid 1px;
+                    background: white;
+                    cursor: pointer;
+                  }
+                  .close__icon {
+                    display: none;
+                  }
+                  .menu {
+                    display: flex;
+                    flex-direction: column;
+                    position: fixed;
+                    transform: translateY(-100%);
+                    transition: transform 0.2s;
+                    top: 0;
+                    left: 0;
+                    right: 0;
+                    bottom: 0;
+                    z-index: 99;
+                    background: black;
+                    color: white;
+                    list-style: none;
+                    padding-top: 4rem;
+                  }
+                  .showMenu {
+                    transform: translateY(0);
+                  }
                 .btn {
                     display: none;
                 }
-            }
-            .nav {
-                display: none;
             }
             .main {
                 .section1 {
